# reactor

./: .gitignore  .pre-commit-config.yaml  .prettierignore  commitlint.config.js  manage.py  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml  labels.yaml
.github/workflows/: build.yaml  commitlint.yaml  labeler.yaml  lint.yaml  poetry.yaml
apps/contributions/: apps.py  settings.py  urls.py
apps/human_resources/: apps.py  settings.py  urls.py
apps/publishing_media/: apps.py  settings.py  urls.py
apps/science/: apps.py  settings.py  urls.py
apps/units/: apps.py  settings.py  urls.py
apps/works/: __init__.py  apps.py  settings.py  urls.py
docs/: README.md
reactor/: apps.py  settings.py  urls.py
reactor/core/: settings.py  urls.py
reactor/db/: settings.py  urls.py
reactor/db/models/: base.py
