# Poetry
# https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "reactor"
version = "0.0.0"
description = "Research Activity Output Repository"
license = "MIT"
authors = [
  "Kamil Paduszyński <92403542+paduszyk@users.noreply.github.com>",
]
readme = "docs/README.md"
repository = "https://github.com/paduszyk/reactor"
packages = [
  { include = "reactor" },
]

[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^2.1.0"
django = { version = "^5.0.1", allow-prereleases = true }
django-appconf = "^1.0.6"
django-configurations = { version = "^2.5", extras = ["database"] }
python-decouple = "^3.8"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.11"

# Ruff
# https://docs.astral.sh/ruff/configuration/
# https://docs.astral.sh/ruff/rules/
# https://docs.astral.sh/ruff/settings/

[tool.ruff]
target-version = "py311"
select = [
  "F",
  "E",
  "W",
  "I",
  "D",
]
ignore = [
  "E501",
  "D1",
  "D205",
]
extend-exclude = ["**/migrations/*"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "django",
  "first-party",
  "local-folder",
]
known-first-party = ["reactor"]

[tool.ruff.isort.sections]
"django" = ["django"]
