# Poetry
# https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "reactor"
version = "0.0.0"
description = "Research Activity Output Repository"
license = "MIT"
authors = [
  "Kamil Paduszyński <92403542+paduszyk@users.noreply.github.com>",
]
readme = "docs/README.md"
repository = "https://github.com/paduszyk/reactor"
packages = [
  { include = "reactor" },
  { include = "**/*", from = "apps" },
]

[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^2.1.0"
django = { version = "^5.0.1", allow-prereleases = true }
django-appconf = "^1.0.6"
django-configurations = { version = "^2.5", extras = ["database"] }
python-decouple = "^3.8"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.11"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-custom-exit-code = "^0.3.0"
pytest-django = "^4.7.0"

# Ruff
# https://docs.astral.sh/ruff/configuration/
# https://docs.astral.sh/ruff/rules/
# https://docs.astral.sh/ruff/settings/

[tool.ruff]
target-version = "py311"
select = [
  "F",
  "E",
  "W",
  "I",
  "D",
]
ignore = [
  "E501",
  "D1",
  "D205",
]
extend-exclude = ["**/migrations/*"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "django",
  "first-party",
  "apps",
  "local-folder",
]
known-first-party = ["reactor"]

[tool.ruff.isort.sections]
"apps" = [
  "contributions",
  "human_resources",
  "publishing_media",
  "science",
  "units",
  "works",
]
"django" = ["django"]

# Pytest
# https://docs.pytest.org/en/latest/reference/reference.html#configuration-options

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--strict-markers",

  # pytest-cov
  # https://pytest-cov.readthedocs.io/en/latest/config.html#reference
  "--cov",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",

  # pytest-django
  # https://pytest-django.readthedocs.io/en/latest/configuring_django.html
  "--ds=reactor.settings",
  "--dc=Tests",

  # pytest-custom-exit-code
  # https://github.com/yashtodi94/pytest-custom_exit_code#usage
  "--suppress-no-test-exit-code",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
python_files = ["test_*.py", "tests.py"]
pythonpath = [".", "apps"]
testpaths = ["reactor/", "apps/"]

# Coverage.py
# https://coverage.readthedocs.io/en/latest/config.html

[tool.coverage.run]
source = ["reactor/", "apps/"]

[tool.coverage.report]
omit = [
  "**/migrations/*",
  "**/settings.py",
  "**/urls.py",
]
exclude_also = [
  "if settings.DEBUG:",
]

[tool.coverage.xml]
output = "coverage.xml"
